5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1680_2471.log
== TEST (2019-05-01 16:08:51) 
-- CODE:
idade = int(input(""))
imc = int(input(""))
print("Entradas: ", idade, "anos e IMC", imc)
-- OUTPUT:
Entradas:  0 anos e IMC 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:09:10) 
-- CODE:
idade = int(input(""))
imc = int(input(""))
print("Entradas:", idade, "anos e IMC", imc)
-- OUTPUT:
Entradas: 0 anos e IMC 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:14:27) 
-- CODE:
idade = int(input(""))
imc = int(input(""))
print("Entradas:", idade, "anos e IMC", imc)
if imc<22.0 and idade <45:
	print("Risco: Baixo")
-- OUTPUT:
Entradas: 0 anos e IMC 0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:15:10) 
-- CODE:
idade = int(input(""))
imc = int(input(""))
print("Entradas:", idade, "anos e IMC", imc)
if imc<22.0 and idade <45:
	print("Risco: Baixo")
-- OUTPUT:
Entradas: 0 anos e IMC 0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:20:02) 
-- CODE:
idade = int(input(""))
imc = int(input(""))
print("Entradas:", idade, "anos e IMC", imc)
if imc >=0 and idade >=0 or <130:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 4
    if imc >=0 and idade >=0 or <130:
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:20:23) 
-- CODE:
idade = int(input(""))
imc = int(input(""))
print("Entradas:", idade, "anos e IMC", imc)
if (imc >=0 and idade >=0 or <130):
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 4
    if (imc >=0 and idade >=0 or <130):
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
